Enable visibility of overflow to table-responsive to ensure the group assignment dropdown doesn't get hidden when opened.

--- a/style/pi-hole.css
+++ b/style/pi-hole.css
@@ -72,6 +72,7 @@
 
 .table-responsive {
     -webkit-overflow-scrolling: touch;
+    overflow: visible;
 }
 
 /* Optimize Queries-Table for small screens */
